Correct the use of the .container class. This solves the horizontal overflow issue.
Therefore, remove overflow-x: hidden value (which was not a good solution to begin with).

--- a/front_page/static/front_page/css/main.css
+++ b/front_page/static/front_page/css/main.css
@@ -63,7 +63,6 @@ body {
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #19181A;
   width: 100%;
-  overflow-x: hidden;
 }
 
 /*
